# Relative

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ci.ps1  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  frame_visualization.py  nested_frames.py  nested_spaces.py  space_visualization.py
src/coordinate/: __init__.py  coordinate.py  system.py  transforms.py  types.py
src/coordinatus/: __init__.py  coordinate.py  frame.py  space.py  transforms.py  types.py  visualization.py
src/coordinatus/transforms/: __init__.py  dimension.py  rotate.py  scale.py  translate.py
src/relative/: __init__.py  visualization.py
tests/coordinate/: test_coordinate.py  test_system.py  test_transforms.py
tests/coordinatus/: test_coordinate.py  test_frame.py  test_init.py  test_space.py  test_transforms.py  test_visualization.py
tests/coordinatus/transforms/: test_dimension.py  test_rotate.py  test_scale.py  test_transforms_init.py  test_translate.py
