[project]
name = "relative"
version = "0.1.0"
description = "A library for working with hierarchical coordinate systems and transformations"
readme = "README.md"
authors = [
    { name = "Manu Gira", email = "manu.gira@outlook.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.10.8",
]

[project.scripts]
relative = "relative:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.ruff.lint.per-file-ignores]
"src/relative/__init__.py" = ["F401"]  # Ignore `F401` (imported but unused)
